--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,14 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+.idea
+
+.gradle
+
+gradle
+
+gradlew
+
+gradlew.bat
+
